
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int uint32_t ;
struct TYPE_2__ {int TAFCR; } ;
typedef scalar_t__ FunctionalState ;


 scalar_t__ DISABLE ;
 int IS_FUNCTIONAL_STATE (scalar_t__) ;
 TYPE_1__* RTC ;
 scalar_t__ RTC_TAFCR_TAMPPUDIS ;
 int assert_param (int ) ;

void RTC_TamperPullUpCmd(FunctionalState NewState)
{

  assert_param(IS_FUNCTIONAL_STATE(NewState));

 if (NewState != DISABLE)
  {

    RTC->TAFCR &= (uint32_t)~RTC_TAFCR_TAMPPUDIS;
  }
  else
  {

    RTC->TAFCR |= (uint32_t)RTC_TAFCR_TAMPPUDIS;
  }
}
